--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <title>Document</title>
 </head>
 <body>
-   
-<form action="" id="form">
+<div>
+    <form action="" id="form">
     <label for="firstName">Enter First Name</label>
     <input type="text" name="firstName" class="first-name" > 
     <input type="submit" value="Click to submit" id="submit">
@@ -18,6 +18,9 @@
 <h2></h2>
 <h2></h2>
 <h2></h2>
+<div>
+    <button type="button" id="button">Remove</button>
+</div>
 <script src="app.js"></script>
 </body>
 </html>
