--- a/index.html
+++ b/index.html
@@ -1,26 +1,24 @@
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
+
 <body>
-<div>
-    <form action="" id="form">
-    <label for="firstName">Enter First Name</label>
-    <input type="text" name="firstName" class="first-name" > 
-    <input type="submit" value="Click to submit" id="submit">
-</form>
-<h2></h2>
-<h2></h2>
-<h2></h2>
-<h2></h2>
-<h2></h2>
-<h2></h2>
-<div>
-    <button type="button" id="button">Remove</button>
-</div>
-<script src="app.js"></script>
+    <div>
+        <form action="" id="form">
+            <label for="firstName">Enter First Name</label>
+            <input type="text" name="firstName" class="first-name">
+            <input type="submit" value="Click to submit" id="submit">
+        </form>
+        <button type="button" id="button">Remove</button>
+        <div class="gallery">
+            <div class="card"></div class="card-title">
+        </div>
+        <script src="app.js"></script>
 </body>
+
 </html>
