--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
             <input type="text" name="firstName" class="first-name">
             <input type="submit" value="Click to submit" id="submit">
         </form>
-        <button type="button" id="button">Remove</button>
+        <button class="button" type="button">Remove</button>
         <div class="gallery">
-            <div class="card"></div class="card-title">
-        </div>
+            <div class="card"></div>
+        </div class="card-title">
         <script src="app.js"></script>
 </body>
 
