--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
     <div>
         <form action="" id="form">
-            <label for="firstName">Enter First Name</label>
+            <label for="firstName">Enter Opener Name</label>
             <input type="text" name="firstName" class="first-name">
             <input type="submit" value="Click to submit" id="submit">
         </form>
