--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
             <label for="Openername">Opener Name</label><br>
             <input type="text" name="openerName" class="opener-name"><br>
 
-            <label for="Discoveredby">Discovered</label><br>
+            <label for="Discoveredby">Discover By</label><br>
             <input type="text" name="discoveredBy" class="discoverer"><br>
 
             <label for="Bag">Setup For The First Bag</label><br>
